[gd_scene load_steps=7 format=3 uid="uid://bexapit2rvibf"]

[ext_resource type="Script" uid="uid://c6kbf11e5j2ef" path="res://Scene/User Interfaces/UI scenes/chapter_manager.gd" id="1_ixrux"]
[ext_resource type="FontFile" uid="uid://dtdw2k1jvjn37" path="res://Asset/Fonts/times.ttf" id="2_kcj5n"]
[ext_resource type="Texture2D" uid="uid://cao4jwwshsvv3" path="res://Asset/images.png" id="3_78ck1"]
[ext_resource type="Texture2D" uid="uid://cdfpkjhi1gi77" path="res://Asset/User Interface/button_ui.png" id="3_g6080"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_78ck1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipfjq"]

[node name="Chapter_Selection" type="Node2D"]

[node name="ChapterManager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ixrux")

[node name="VBoxContainer" type="VBoxContainer" parent="ChapterManager"]
layout_mode = 0
offset_left = 610.0
offset_top = 116.0
offset_right = 1113.0
offset_bottom = 600.0

[node name="Stage 1-1" type="Button" parent="ChapterManager/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 48
text = "1-1
"

[node name="Stage 1-2" type="Button" parent="ChapterManager/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 48
text = "1-2
"

[node name="Stage 1-3" type="Button" parent="ChapterManager/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 48
text = "1-3
"

[node name="Stage 1-4" type="Button" parent="ChapterManager/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 48
text = "1-4"

[node name="Stage 1-5" type="Button" parent="ChapterManager/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 48
text = "1-5
"

[node name="Label" type="Label" parent="ChapterManager"]
layout_mode = 0
offset_left = 43.0
offset_top = 34.0
offset_right = 531.0
offset_bottom = 94.0
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 48
text = "Stages"

[node name="Panel" type="Panel" parent="ChapterManager"]
layout_mode = 0
offset_left = 38.0
offset_top = 117.0
offset_right = 600.0
offset_bottom = 610.0

[node name="TextureRect" type="TextureRect" parent="ChapterManager/Panel"]
layout_mode = 0
offset_left = 25.0
offset_top = 35.0
offset_right = 534.0
offset_bottom = 372.0
texture = ExtResource("3_78ck1")

[node name="Play_Attack" type="Button" parent="ChapterManager/Panel"]
layout_mode = 0
offset_left = 193.0
offset_top = 387.0
offset_right = 388.0
offset_bottom = 467.0
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_78ck1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ipfjq")
text = "Play"
icon = ExtResource("3_g6080")
icon_alignment = 1
expand_icon = true

[node name="Title" type="Button" parent="ChapterManager/Panel"]
layout_mode = 0
offset_left = 185.0
offset_top = 5.0
offset_right = 380.0
offset_bottom = 85.0
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_78ck1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ipfjq")
icon = ExtResource("3_g6080")
icon_alignment = 1
expand_icon = true

[node name="Back" type="Button" parent="."]
offset_left = 908.0
offset_top = 21.0
offset_right = 1103.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("2_kcj5n")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_78ck1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ipfjq")
text = "Back
"
icon = ExtResource("3_g6080")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="ChapterManager/VBoxContainer/Stage 1-1" to="ChapterManager" method="_on_stage_1_1_pressed"]
[connection signal="pressed" from="Back" to="ChapterManager" method="_on_back_pressed"]
